# s1-reader

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  environment.yaml  requirements.txt  setup.cfg
.circleci/: config.yml  freeze-deps.sh  specfile.txt
.github/ISSUE_TEMPLATE/workflows/: ci.yml
.github/workflows/: unit_tests.yaml
sentinel1_reader/: sentinel1_burst_slc.py  sentinel1_reader.py
src/s1reader/: __init__.py  get_xml_boundary.py  reader.py  s1_annotation.py  s1_burst_id.py  s1_burst_slc.py  s1_etad.py  s1_info.py  s1_noise.py  s1_orbit.py  s1_reader.py  version.py
src/s1reader/data/: sentinel1_track_burst_id.txt
src/s1reader/utils/: plot_bursts.py  utils.py
src/sentinel1_reader/: sentinel1_burst_slc.py  sentinel1_orbit_reader.py  sentinel1_reader.py
tests/: README.md  conftest.py  create_esa_db_sample.py  download_data.py  requirements.txt  test_bursts.py  test_corrections.py  test_load_rfi.py  test_orbit.py  test_reader.py
tests/cassettes/test_orbit/: test_list_public_bucket.yaml  test_list_public_bucket_resorb.yaml
tests/data/: README.md  dummy_dem.tif  esa_burst_db_sample.csv  make_empty_img.py  make_empty_zip.sh  rfi_info_list.json  rfi_info_list.pickle
tests/data/orbits/: S1A_OPER_AUX_POEORB_OPOD_20210304T033926_V20141003T225944_20141005T005944.EOF  S1A_OPER_AUX_POEORB_OPOD_20210305T064823_V20141226T225944_20141228T005944.EOF  S1A_OPER_AUX_POEORB_OPOD_20220917T081749_V20220827T225942_20220829T005942.EOF  S1A_OPER_AUX_POEORB_OPOD_20221019T082002_V20220928T225942_20220930T005942.EOF  S1A_OPER_AUX_POEORB_OPOD_20221031T083817_V20221010T225942_20221012T005942.EOF  S1A_OPER_AUX_RESORB_OPOD_20221024T205436_V20221024T170308_20221024T202038.EOF  S1A_OPER_AUX_RESORB_OPOD_20230823T162050_V20230823T123139_20230823T154909.EOF  S1A_OPER_AUX_RESORB_OPOD_20230823T174849_V20230823T141024_20230823T172754.EOF  (+1 more)
