[metadata]
name = s1reader
version = attr: s1reader.__version__
description = A Sentinel1 metadata reader
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/opera-adt/s1-reader
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    License = file : LICENSE
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
