[metadata]
name = s1reader
version = attr: s1reader.version.release_version
description = A Sentinel-1 reader for ISCE3
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/opera-adt/s1-reader
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires =
    setuptools
    importlib_resources

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    s1_info = s1reader.s1_info:main
